# frontend/openapi.json
@@ -431,7 +431,9 @@
           }
         },
         "type": "object",
-        "required": ["status"],
+        "required": [
+          "status"
+        ],
         "title": "CaptureResponse"
       },
       "EventDetail": {
@@ -447,7 +449,12 @@
           },
           "event_type": {
             "type": "string",
-            "enum": ["http", "http_incoming", "log", "exception"],
+            "enum": [
+              "http",
+              "http_incoming",
+              "log",
+              "exception"
+            ],
             "title": "Event Type"
           },
           "summary": {
@@ -492,7 +499,13 @@
           }
         },
         "type": "object",
-        "required": ["id", "timestamp", "event_type", "summary", "data"],
+        "required": [
+          "id",
+          "timestamp",
+          "event_type",
+          "summary",
+          "data"
+        ],
         "title": "EventDetail"
       },
       "EventSummary": {
@@ -508,7 +521,12 @@
           },
           "event_type": {
             "type": "string",
-            "enum": ["http", "http_incoming", "log", "exception"],
+            "enum": [
+              "http",
+              "http_incoming",
+              "log",
+              "exception"
+            ],
             "title": "Event Type"
           },
           "summary": {
@@ -527,7 +545,12 @@
           }
         },
         "type": "object",
-        "required": ["id", "timestamp", "event_type", "summary"],
+        "required": [
+          "id",
+          "timestamp",
+          "event_type",
+          "summary"
+        ],
         "title": "EventSummary"
       },
       "ExceptionCapturePayload": {
@@ -570,7 +593,9 @@
           }
         },
         "type": "object",
-        "required": ["data"],
+        "required": [
+          "data"
+        ],
         "title": "ExceptionCapturePayload"
       },
       "ExceptionData": {
@@ -611,7 +636,9 @@
         },
         "additionalProperties": true,
         "type": "object",
-        "required": ["exc_type"],
+        "required": [
+          "exc_type"
+        ],
         "title": "ExceptionData"
       },
       "ExceptionEventData": {
@@ -667,7 +694,9 @@
           }
         },
         "type": "object",
-        "required": ["exc_type"],
+        "required": [
+          "exc_type"
+        ],
         "title": "ExceptionEventData"
       },
       "ExceptionFrame": {
@@ -727,7 +756,9 @@
           }
         },
         "type": "object",
-        "required": ["filename"],
+        "required": [
+          "filename"
+        ],
         "title": "ExceptionFrame"
       },
       "HTTPValidationError": {
@@ -799,7 +830,10 @@
           }
         },
         "type": "object",
-        "required": ["request", "response"],
+        "required": [
+          "request",
+          "response"
+        ],
         "title": "HttpCapturePayload"
       },
       "HttpEventData": {
@@ -971,7 +1005,10 @@
           }
         },
         "type": "object",
-        "required": ["request", "response"],
+        "required": [
+          "request",
+          "response"
+        ],
         "title": "HttpIncomingCapturePayload"
       },
       "HttpIncomingEventData": {
@@ -1240,7 +1277,12 @@
           }
         },
         "type": "object",
-        "required": ["method", "path", "url", "headers"],
+        "required": [
+          "method",
+          "path",
+          "url",
+          "headers"
+        ],
         "title": "HttpIncomingRequestData"
       },
       "HttpIncomingResponseData": {
@@ -1274,7 +1316,10 @@
           }
         },
         "type": "object",
-        "required": ["status_code", "headers"],
+        "required": [
+          "status_code",
+          "headers"
+        ],
         "title": "HttpIncomingResponseData"
       },
       "HttpMeta": {
@@ -1333,7 +1378,11 @@
           }
         },
         "type": "object",
-        "required": ["method", "url", "headers"],
+        "required": [
+          "method",
+          "url",
+          "headers"
+        ],
         "title": "HttpRequestData"
       },
       "HttpResponseData": {
@@ -1367,7 +1416,10 @@
           }
         },
         "type": "object",
-        "required": ["status_code", "headers"],
+        "required": [
+          "status_code",
+          "headers"
+        ],
         "title": "HttpResponseData"
       },
       "LogCapturePayload": {
@@ -1410,7 +1462,9 @@
           }
         },
         "type": "object",
-        "required": ["data"],
+        "required": [
+          "data"
+        ],
         "title": "LogCapturePayload"
       },
       "LogData": {
@@ -1486,7 +1540,11 @@
         },
         "additionalProperties": true,
         "type": "object",
-        "required": ["level", "logger_name", "message"],
+        "required": [
+          "level",
+          "logger_name",
+          "message"
+        ],
         "title": "LogData"
       },
       "LogEventData": {
@@ -1577,7 +1635,11 @@
           }
         },
         "type": "object",
-        "required": ["level", "logger_name", "message"],
+        "required": [
+          "level",
+          "logger_name",
+          "message"
+        ],
         "title": "LogEventData"
       },
       "MetaResponse": {
@@ -1599,7 +1661,12 @@
           "event_types": {
             "items": {
               "type": "string",
-              "enum": ["http", "http_incoming", "log", "exception"]
+              "enum": [
+                "http",
+                "http_incoming",
+                "log",
+                "exception"
+              ]
             },
             "type": "array",
             "title": "Event Types"
@@ -1620,7 +1687,13 @@
           }
         },
         "type": "object",
-        "required": ["hosts", "methods", "event_types", "apps", "sessions"],
+        "required": [
+          "hosts",
+          "methods",
+          "event_types",
+          "apps",
+          "sessions"
+        ],
         "title": "MetaResponse"
       },
       "ValidationError": {
@@ -1656,7 +1729,11 @@
           }
         },
         "type": "object",
-        "required": ["loc", "msg", "type"],
+        "required": [
+          "loc",
+          "msg",
+          "type"
+        ],
         "title": "ValidationError"
       }
     }
